[gd_scene load_steps=5 format=3 uid="uid://nlsveud5flp7"]

[ext_resource type="Texture2D" uid="uid://d3ox4bcts3ssd" path="res://image/sollid_green.png" id="1_5pm8o"]
[ext_resource type="Script" path="res://scene/item/status_area.gd" id="1_pgiiw"]
[ext_resource type="Texture2D" uid="uid://blbekfavhbw3l" path="res://image/logo_bloom.png" id="2_f6j1l"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4e4hs"]
size = Vector2(32, 32)

[node name="Bloom" type="Node2D"]
z_index = -1
script = ExtResource("1_pgiiw")
effect_type = "bloom"

[node name="EffectArea" type="Area2D" parent="."]

[node name="AreaSprite" type="Sprite2D" parent="EffectArea"]
self_modulate = Color(1, 1, 1, 0.247059)
scale = Vector2(1.5, 0.5)
texture = ExtResource("1_5pm8o")

[node name="AreaSprite2" type="Sprite2D" parent="EffectArea"]
self_modulate = Color(1, 1, 1, 0.247059)
position = Vector2(0, 64)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_5pm8o")

[node name="AreaSprite3" type="Sprite2D" parent="EffectArea"]
self_modulate = Color(1, 1, 1, 0.247059)
position = Vector2(0, -64)
scale = Vector2(0.5, 0.5)
texture = ExtResource("1_5pm8o")

[node name="BloomCollision" type="CollisionShape2D" parent="EffectArea"]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_4e4hs")

[node name="BloomCollision2" type="CollisionShape2D" parent="EffectArea"]
position = Vector2(64, 0)
shape = SubResource("RectangleShape2D_4e4hs")

[node name="BloomCollision3" type="CollisionShape2D" parent="EffectArea"]
position = Vector2(0, 64)
shape = SubResource("RectangleShape2D_4e4hs")

[node name="BloomCollision4" type="CollisionShape2D" parent="EffectArea"]
position = Vector2(-64, 0)
shape = SubResource("RectangleShape2D_4e4hs")

[node name="BloomSpots" type="Node2D" parent="."]

[node name="BloomSpot" type="Node2D" parent="BloomSpots"]

[node name="BloomArea" type="Area2D" parent="BloomSpots/BloomSpot"]

[node name="BloomCollision" type="CollisionShape2D" parent="BloomSpots/BloomSpot/BloomArea"]
position = Vector2(0, -64)
shape = SubResource("RectangleShape2D_4e4hs")

[node name="BloomSprite" type="Sprite2D" parent="BloomSpots/BloomSpot/BloomArea"]
position = Vector2(0, -64)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_f6j1l")

[node name="BloomSpot2" type="Node2D" parent="BloomSpots"]

[node name="BloomArea" type="Area2D" parent="BloomSpots/BloomSpot2"]

[node name="BloomCollision" type="CollisionShape2D" parent="BloomSpots/BloomSpot2/BloomArea"]
position = Vector2(64, 0)
shape = SubResource("RectangleShape2D_4e4hs")

[node name="BloomSprite" type="Sprite2D" parent="BloomSpots/BloomSpot2/BloomArea"]
position = Vector2(64, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_f6j1l")

[node name="BloomSpot3" type="Node2D" parent="BloomSpots"]

[node name="BloomArea" type="Area2D" parent="BloomSpots/BloomSpot3"]

[node name="BloomCollision" type="CollisionShape2D" parent="BloomSpots/BloomSpot3/BloomArea"]
position = Vector2(0, 64)
shape = SubResource("RectangleShape2D_4e4hs")

[node name="BloomSprite" type="Sprite2D" parent="BloomSpots/BloomSpot3/BloomArea"]
position = Vector2(0, 64)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_f6j1l")

[node name="BloomSpot4" type="Node2D" parent="BloomSpots"]

[node name="BloomArea" type="Area2D" parent="BloomSpots/BloomSpot4"]
position = Vector2(1, 0)

[node name="BloomCollision" type="CollisionShape2D" parent="BloomSpots/BloomSpot4/BloomArea"]
position = Vector2(-65, 0)
shape = SubResource("RectangleShape2D_4e4hs")

[node name="BloomSprite" type="Sprite2D" parent="BloomSpots/BloomSpot4/BloomArea"]
position = Vector2(-65, 0)
scale = Vector2(0.5, 0.5)
texture = ExtResource("2_f6j1l")
